--- a/src/layouts/Landing/faq/styles.css
+++ b/src/layouts/Landing/faq/styles.css
@@ -4,8 +4,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1vmin;
+    margin-bottom: 3vmin;
 }
 
-details, summary{
+details{
     width: 75dvw;
+    border: 0.5px solid black;
+}
+
+summary{
+    padding: 1vmin;
+}
+
+details[open] summary{
+    border-bottom: 0.5px solid black;
+    font-weight: bold;
 }
