--- a/src/layouts/Landing/content.css
+++ b/src/layouts/Landing/content.css
@@ -423,14 +423,19 @@ footer section section div{
     flex-direction: row;
     justify-content: space-around;
     margin-bottom: 10vmin;
+    width: 100%;
+    flex-wrap: wrap;
+    padding: 0;
 }
 
 .productSection li{
+    flex: 1 1 20%;
     list-style: none;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1vmin;
+    box-sizing: border-box;
 }
 
 .productSection li h4, .productSection li h5{
