Entre al sistema señores

--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Gerente</title>
     <link rel="stylesheet" href="/css/admin/dashboard.css">
+    <link rel="stylesheet" href="../../../public/css/admin/header.css">
 </head>
 <body>
     <%- include('../partials/header'); %>
