--- a/public/css/admin/inventario.css
+++ b/public/css/admin/inventario.css
@@ -145,7 +145,7 @@ main .Table--inventario table tbody tr:hover {
 dialog{
     margin: auto;
     width: 650px;
-    height: 450px;
+    height: 475px;
     padding: 10px;
     border-radius: 10px;
     border: 1px solid #aaa;
@@ -246,10 +246,32 @@ dialog .input--Container .Items img{
     position: relative;
     left: -35px;
 }
+dialog .input--Container .Items input{
+    width: 210px;
+}
+dialog .input--Container label{
+    font-size: 1.1em;
+    letter-spacing: 1px;
+    font-weight: 600;
+}
+dialog .input--Container textarea{
+    border: none;
+    padding: 2px 10px;
+    border-right: 2px solid #aaa;
+    border-bottom: 2px solid #aaa;
+    border-radius: 15px;
+    font-size: 0.9em;
+    max-lines: 2;
+    outline: line;
+    resize: none;
+}
+dialog .input--Container textarea::placeholder{
+    color: var(--ColorNavigatorBar);
+}
 dialog form button{
     width: 280px;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 5px;
     padding: 5px 10px;
     font-size: 1.2em;
     letter-spacing: 1px;
@@ -267,41 +289,9 @@ dialog form button:hover{
     outline: 2px solid #000;
     padding: 6px 10px;
 }
-.Eliminar--producto{
-    width: 450px;
-    height: 145px;
-}
-.Eliminar--producto form div{
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-}
-.Eliminar--producto form div label{
-    font-size: 1.3em;
-    letter-spacing: 1px;
-    font-weight: 600;
-}
-.Eliminar--producto form div input{
-    width: 300px;
-    padding: 5px 10px;
-    border: none;
-    border-bottom: 2px solid #aaa;
-    border-right: 2px solid #aaa;
-    border-radius: 15px;
-    outline: none;
-    font-size: 0.9em;
-}
-.Eliminar--producto form div input:hover{
-    border-bottom: 2px solid var(--SecondaryColor);
-    border-right: 2px solid var(--SecondaryColor);
-}
-.Eliminar--producto form div input::placeholder{
-    width: 300px;
-    color: var(--ColorNavigatorBar);
-}
-
-.Eliminar--producto form button{
-    width: 350px;
+#dialog--2{
+    width: 640px;
+    height: 505px;
 }
 
 
