--- a/src/layouts/Gerente/Envios/principal/Envios.html
+++ b/src/layouts/Gerente/Envios/principal/Envios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Envios</title>
-    <link rel="stylesheet" href="mayorista.css">
+    <link rel="stylesheet" href="Envios.css">
     <link rel="stylesheet" href="../../header-sidebar/Estilo.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
             <a href="../../Proveedor/Proveedor.html" class="Link">
                 <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M0-240v-63q0-43 44-70t116-27q13 0 25 .5t23 2.5q-14 21-21 44t-7 48v65H0Zm240 0v-65q0-32 17.5-58.5T307-410q32-20 76.5-30t96.5-10q53 0 97.5 10t76.5 30q32 20 49 46.5t17 58.5v65H240Zm540 0v-65q0-26-6.5-49T754-397q11-2 22.5-2.5t23.5-.5q72 0 116 26.5t44 70.5v63H780Zm-455-80h311q-10-20-55.5-35T480-370q-55 0-100.5 15T325-320ZM160-440q-33 0-56.5-23.5T80-520q0-34 23.5-57t56.5-23q34 0 57 23t23 57q0 33-23 56.5T160-440Zm640 0q-33 0-56.5-23.5T720-520q0-34 23.5-57t56.5-23q34 0 57 23t23 57q0 33-23 56.5T800-440Zm-320-40q-50 0-85-35t-35-85q0-51 35-85.5t85-34.5q51 0 85.5 34.5T600-600q0 50-34.5 85T480-480Zm0-80q17 0 28.5-11.5T520-600q0-17-11.5-28.5T480-640q-17 0-28.5 11.5T440-600q0 17 11.5 28.5T480-560Zm1 240Zm-1-280Z"/></svg></Li>
             </a>
-            <a href="../principal/Envios.html" class="Link">
+            <a href="Envios.html" class="Link">
                 <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M240-160q-50 0-85-35t-35-85H40v-440q0-33 23.5-56.5T120-800h560v160h120l120 160v200h-80q0 50-35 85t-85 35q-50 0-85-35t-35-85H360q0 50-35 85t-85 35Zm0-80q17 0 28.5-11.5T280-280q0-17-11.5-28.5T240-320q-17 0-28.5 11.5T200-280q0 17 11.5 28.5T240-240ZM120-360h32q17-18 39-29t49-11q27 0 49 11t39 29h272v-360H120v360Zm600 120q17 0 28.5-11.5T760-280q0-17-11.5-28.5T720-320q-17 0-28.5 11.5T680-280q0 17 11.5 28.5T720-240Zm-40-200h170l-90-120h-80v120ZM360-540Z"/></svg></Li>
             </a>
             <a href="../../Avisos/Avisos.html" class="Link">
@@ -37,100 +37,18 @@
         </ul>
     </nav>
     <main>
-        <div class="Content--page">
-            <div class="input--Container">
-                <input type="search" placeholder="00000" id="Lupa">
-                <label for="Lupa">
-                    <img alt="Lupa" src="../../../../../public/images/icons/search.png" id="Lupa">
-                </label>
-            </div>
-            <div class="Minorista--Mayorista">
-                <a href="../Minorista/Minorista.html" id="minorista">Minorista</a>
-                <div>
-                    <span id="mayorista">Mayorista</span>
-                </div>
-            </div>
-        </div>
-        <div class="Table--Container">
-            <table>
-                <caption>Envios Mayoristas</caption>
-                <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Id__usuario</th>
-                    <th>Destino</th>
-                    <th>Fecha de compra</th>
-                    <th>Monto</th>
-                    <th>Fecha de entrega</th>
-                    <th>Id__factura</th>
-                    <th>Factura</th>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>Naguanagua</td>
-                        <td>12/05/2024</td>
-                        <td>45.55$</td>
-                        <td>20/05/2024</td>
-                        <td>1</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>Naguanagua</td>
-                        <td>12/05/2024</td>
-                        <td>45.55$</td>
-                        <td>20/05/2024</td>
-                        <td>2</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>3</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>45.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>4</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>45.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>5</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>45.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>6</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>45.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="Content">
+            <section class="Content--Container">
+                <article id="Minorista">
+                    <h3>Minorista</h3>
+
+                </article>
+                <article id="Mayorista">
+                    <h3>Mayorista</h3>
+
+                </article>
+            </section>
         </div>
     </main>
 </body>
-<script src="mayorista.js"></script>
 </html>
