Asignando rutas a envios

--- a/src/routes/admin/mayorista.ejs
+++ b/src/routes/admin/mayorista.ejs
@@ -19,7 +19,7 @@
                 </label>
             </div>
             <div class="Minorista--Mayorista">
-                <a href="../Minorista/Minorista.html" id="minorista">Minorista</a>
+                <a href="/admin/envios/minorista" id="minorista">Minorista</a>
                 <div>
                     <span id="mayorista">Mayorista</span>
                 </div>
