--- a/src/routes/admin/minorista.ejs
+++ b/src/routes/admin/minorista.ejs
@@ -22,7 +22,7 @@
                 <div>
                     <span id="Minorista">Minorista</span>
                 </div>
-                <a href="../Mayorista/Mayorista.html" id="Mayorista">Mayorista</a>
+                <a href="/admin/envios/mayorista" id="Mayorista">Mayorista</a>
             </article>
         </section>
         <section class="Table--Container">
