--- a/src/routes/admin/minorista.ejs
+++ b/src/routes/admin/minorista.ejs
@@ -33,84 +33,26 @@
                     <th>Id</th>
                     <th>Id__usuario</th>
                     <th>Destino</th>
-                    <th>Fecha de compra</th>
-                    <th>Monto</th>
                     <th>Fecha de entrega</th>
+                    <th>Monto</th>
                     <th>Id__factura</th>
-                    <th>Factura</th>
+                    <th>Status</th>
                 </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>Naguanagua</td>
-                        <td>12/05/2024</td>
-                        <td>25.55$</td>
-                        <td>20/05/2024</td>
-                        <td>1</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>Naguanagua</td>
-                        <td>12/05/2024</td>
-                        <td>25.55$</td>
-                        <td>20/05/2024</td>
-                        <td>2</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>3</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>25.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>4</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>25.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>4</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>25.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>5</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>25.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>6</td>
-                        <td>Naguanagua</td>
-                        <td>14/05/2024</td>
-                        <td>25.55$</td>
-                        <td>20/05/2024</td>
-                        <td>3</td>
-                        <td>Factura</td>
-                    </tr>
+                    <% for(let i = 0; i < envios.length; i++) { %>
+                        <% if(envios[i].tipo === 'minorista') { %>
+                        <tr>
+                            <td><%= envios[i].id %></td>
+                            <td><%= envios[i].id_user %></td>
+                            <td><%= envios[i].destino %></td>
+                            <td><%= envios[i].entrega.toLocaleDateString() %></td>
+                            <td><%= envios[i].monto %> $</td>
+                            <td><%= envios[i].id_factura %></td>
+                            <td><%= envios[i].status %></td>
+                            </tr>
+                        <% } %>
+                    <% } %>
                 </tbody>
             </table>
         </section>
