--- a/src/routes/admin/mayorista.ejs
+++ b/src/routes/admin/mayorista.ejs
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Gerente</title>
     <link rel="stylesheet" href="/css/admin/mayorista.css">
-    <link rel="stylesheet" href="../../../public/css/admin/header.css">
 </head>
 <body>
     <%- include('../partials/header'); %>
@@ -13,9 +12,9 @@
     <main>
         <div class="Content--page">
             <div class="input--Container">
-                <input type="search" placeholder="00000" id="Lupa">
+                <input type="search" placeholder="Destino" id="Destino">
                 <label for="Lupa">
-                    <img alt="Lupa" src="../../../../../public/images/icons/search.png" id="Lupa">
+                    <img alt="Lupa" src="/images/icons/search.png" id="Lupa">
                 </label>
             </div>
             <div class="Minorista--Mayorista">
