--- a/src/layouts/Landing/product/index.html
+++ b/src/layouts/Landing/product/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers</title>
     <link rel="stylesheet" href="../content.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -108,7 +109,15 @@
     </aside>
 
     <main>
-
+        <div class="principal-container">
+            <div class="image-container">
+                <img id="example-liquor" src="../../../../public/images/Licores/whisky-oldpar.jpg">
+            </div>
+            <div class="info-container">
+                <p style="font-size: 1.8vmin;">Inicio > Old Par</p>
+                <h2>Whisky Old Par 12 years 750ml</h2>
+            </div>
+        </div>
     </main>
 
     <footer>
