product info container update

--- a/src/layouts/Landing/product/index.html
+++ b/src/layouts/Landing/product/index.html
@@ -114,8 +114,25 @@
                 <img id="example-liquor" src="../../../../public/images/Licores/whisky-oldpar.jpg">
             </div>
             <div class="info-container">
-                <p style="font-size: 1.8vmin;">Inicio > Old Par</p>
-                <h2>Whisky Old Par 12 years 750ml</h2>
+                <div>
+                    <p style="font-size: 1.8vmin;">Inicio > Old Par</p>
+                    <h2>Whisky Grand Old Parr Aged 12 years 750ml</h2>
+                    <p>
+                        Unidades Disponibles: 7<br>
+                        Categoria: Whisky
+                    </p>
+                    <span id="price">
+                        100,00$
+                    </span>
+                </div>
+                <div>
+                    <div id="units">
+
+                    </div>
+                    <details>
+                        <summary>FICHA TECNICA</summary>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
