--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Gerente</title>
     <link rel="stylesheet" href="/css/admin/dashboard.css">
-    <link rel="stylesheet" href="../../../public/css/admin/header.css">
 </head>
 <body>
     <%- include('../partials/header'); %>
@@ -54,7 +53,8 @@
                     </div>
     
                     <article class="Grafica--Estadistica">
-                        <canvas id="myChart"></canvas>
+                        <canvas id="myChart">
+                        </canvas>
                     </article>
                 </div>
             </section>
@@ -71,18 +71,6 @@
                                 <div class="Title">Solicitudes</div>
                             </span>
                         </article>
-                        <article class="Procesados--Container">
-                            <span>
-                                <%= envios.filter(envio => envio.status === 'pending').length %>
-                                <div class="Title">Procesados</div>
-                            </span>
-                        </article>
-                        <article class="Envios--Regionales">
-                            <span>
-                                Envios Regionales
-                                <div class="Title">100</div>
-                            </span>
-                        </article>
                     </div>
         
                     <div class="Container--2">
@@ -96,12 +84,6 @@
                             <span>
                                 <%= envios.filter(envio => envio.status === 'completado').length %>
                                 <div class="Title">Completados</div>
-                            </span>
-                        </article>
-                        <article class="Envios--Nacionales">
-                            <span>
-                                Envios Nacionales
-                                <div class="Title">100</div>
                             </span>
                         </article>
                     </div>
