--- a/src/layouts/Gerente/Avisos/Avisos.css
+++ b/src/layouts/Gerente/Avisos/Avisos.css
@@ -13,7 +13,7 @@
 }
 main{
     position: absolute;
-    top: 105px;
+    top: 85px;
     left: 145px;
     width: 85%;
     box-shadow: 0 0 5px #000;
@@ -116,15 +116,16 @@ main .Content .aviso button{
     background-color: var(--SecondaryColor);
     border: none;
     outline: none;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 600;
     letter-spacing: 1px;
     transition: .1s linear;
     cursor: pointer;
 }
 main .Content .aviso  button:hover{
-    background-color: var(--HoverColor);
-    color: var(--ColorNavigatorBar);
+    background-color: var(--PrimaryColor);
+    color: var(--SecondaryColor);
+    border: 2px solid var(--SecondaryColor)
 }
 main .Content .Table--Container{
     margin-top: 5px;
