Cambiando Grafica y aplicando Dolar API

--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -46,7 +46,7 @@
                                 <% for (let i = 0; i < ventas.length; i++) { %>
                                     <% total += Number(ventas[i].ingresos) || 0; %>
                                 <% } %>
-                                <%= parseInt(total.toFixed(2)) %>
+                                <%= parseInt(total.toFixed(2)) %>$
                                 <div class="Title">Ingresos</div>
                             </span>
                         </article>
