--- a/src/routes/admin/estadistica.ejs
+++ b/src/routes/admin/estadistica.ejs
@@ -48,13 +48,9 @@
                 <article>
                     <h2>Conversion Monetaria</h2>
                     <div>
-                        <input placeholder="$" id="Dolar">
+                        <input type="number" placeholder="$" id="Dolar">
                         <span>=</span>
-                        <input placeholder="Bs" id="Bolivares">
-                    </div>
-                    <div class="Porcentaje">
-                        <p>Porcentaje de <br>ganancia</p>
-                        <div id="Resultado">Grafica</div>
+                        <input type="number" placeholder="Bs" id="Bolivares">
                     </div>
                 </article>
                 <article>
@@ -84,18 +80,6 @@
                 </table>
             </section>
         </div>
-        <section class="Ventas">
-            <article>
-                <div class="Container--1">
-                    <div>Ventas del dia 002</div>
-                    <div>Ventas del mes 002</div>
-                </div>
-                <div class="Container--2">
-                    <div>Ingresos 1.000.000</div>
-                    <div>Egresos 1.000.000</div>
-                </div>
-            </article>
-        </section>
     </main>
     <script src="/js/admin/estadistica.js"></script>
 </body>
