Actualizando Avisos y DB

--- a/src/routes/admin/avisos.ejs
+++ b/src/routes/admin/avisos.ejs
@@ -22,6 +22,7 @@
                     </div>
                     <div class="Tipo--aviso">
                         <select required name="tipo">
+                            <option selected value="">Todos</option>
                             <option value="Envio">Envio</option>
                             <option value="Proveedor">Proveedor</option>
                             <option value="Personal">Personal</option>
