--- a/src/routes/admin/proveedor.ejs
+++ b/src/routes/admin/proveedor.ejs
@@ -57,6 +57,7 @@
                     </thead>
                     <tbody>
                         <% proveedor.forEach((proveedor) => { %>
+                            <% if(proveedor.status === 'active'){ %>
                             <tr>
                                 <td><%= proveedor.id %></td>
                                 <td><%= proveedor.nombre %></td>
@@ -66,6 +67,7 @@
                                 <td><%= proveedor.fecha_compra.toLocaleDateString() %></td>
                                 <td><%= proveedor.fecha_entrega.toLocaleDateString() %></td>
                             </tr>
+                            <% } %>
                         <% }) %>
                     </tbody>
                 </table>
@@ -74,98 +76,90 @@
         <dialog id="dialog--1">
             <span id="CerrarAgregar">X</span>
             <h2>Agregar Proveedor</h2>
-            <form>
+            <form action="/admin/proveedor/create" method="POST">
                 <div class="Input--Container">
                     <div>
                         <label for="Nombre--proveedor">Nombre del Proveedor</label>
-                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor">
-                    </div>
-                    <div>
-                        <label for="Apellido--proveedor">Apellido del Proveedor</label>
-                        <input placeholder="Ingrese el apellido del proveedor" required id="Apellido--proveedor">
+                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor" name="nombre">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="RIF">RIF</label>
-                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF">
+                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF" name="rif">
                     </div>
                     <div>
                         <label for="Bebida">Producto del Proveedor</label>
-                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida">
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida" name="producto">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Ubicación">Ubicación del Proveedor</label>
-                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación">
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación" name="ubicacion">
                     </div>
                     <div>
                         <label for="Telefono">Telefono del proveedor</label>
-                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono">
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono" name="telefono">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Fecha--compra">Fecha de compra</label>
-                        <input type="date" id="Fecha--compra" required>
+                        <input type="date" id="Fecha--compra" required name="fecha_compra">
                     </div>
                     <div>
                         <label for="Fecha--entrega">Fecha de entrega</label>
-                        <input type="date" id="Fecha--entrega" required>
+                        <input type="date" id="Fecha--entrega" required name="fecha_entrega">
                     </div>
                 </div>
                 <button type="submit" id="SubmitAgregar">Agregar</button>
             </form>
         </dialog>
-        <dialog id="dialog--2">
+        <dialog id="dialog--2" >
             <span id="CerrarModificar">X</span>
             <h2>Modificar Proveedor</h2>
-            <form>
+            <form action="/admin/proveedor/modificar" method="POST">
                 <div class="Input--Container">
                     <div>
                         <label for="ID">Id</label>
-                        <input placeholder="Ingrese el id del proveedor que quiere modificar" required id="ID--proveedor">
+                        <input placeholder="Ingrese el id del proveedor que quiere modificar" required id="ID--proveedor" name="id">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Nombre--proveedor">Nombre del Proveedor</label>
-                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor">
-                    </div>
-                    <div>
-                        <label for="Apellido--proveedor">Apellido del Proveedor</label>
-                        <input placeholder="Ingrese el apellido del proveedor" required id="Apellido--proveedor">
+                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor" name="nombre">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="RIF">RIF</label>
-                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF">
+                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF" name="rif">
                     </div>
                     <div>
                         <label for="Bebida">Producto del Proveedor</label>
-                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida">
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida" name="producto">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Ubicación">Ubicación del Proveedor</label>
-                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación">
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación" name="ubicacion">
                     </div>
                     <div>
                         <label for="Telefono">Telefono del proveedor</label>
-                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono">
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono" name="telefono">
                     </div>
                 </div>
                 <div class="Input--Container">
                     <div>
                         <label for="Fecha--compra">Fecha de compra</label>
-                        <input type="date" id="Fecha--compra" required>
+                        <input type="date" id="Fecha--compra" required name="fecha_compra">
                     </div>
                     <div>
                         <label for="Fecha--entrega">Fecha de entrega</label>
-                        <input type="date" id="Fecha--entrega" required>
+                        <input type="date" id="Fecha--entrega" required name="fecha_entrega">
                     </div>
                 </div>
                 <button type="submit" id="SubmitModificar">Modificar</button>
