--- a/src/routes/admin/estadistica.ejs
+++ b/src/routes/admin/estadistica.ejs
@@ -54,7 +54,10 @@
                     </div>
                 </article>
                 <article>
-                    <div class="Grafica">Grafica</div>
+                    <div class="Grafica">
+                        <canvas id="myChart">
+                        </canvas>
+                    </div>
                 </article>
             </section>
             <section class="Table--Popular">
@@ -72,6 +75,7 @@
             </section>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/js/admin/estadistica.js"></script>
 </body>
 </html>
