--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -22,9 +22,8 @@ main{
     left: 150px;
     top: 80px;
     border-radius: 15px;
-    box-shadow: 0 0 3px #000;
     width: 85%;
-    gap: 15px;
+    gap: 30px;
     padding: 15px;
 }
 main .Avisos--panel{
@@ -38,6 +37,7 @@ main .Avisos--panel{
     padding: 15px;
     flex: 1;
 }
+
 main .Avisos--panel .Content--avisos{
     display: flex;
     justify-content: space-between;
@@ -81,6 +81,17 @@ main .Avisos--panel table{
     overflow-y: auto;
     overflow-x: hidden;
 }
+main .Avisos--panel table::-webkit-scrollbar{
+    width: 12px;
+    border-radius: 15px;
+    background-color: #aaa;
+}
+main .Avisos--panel table::-webkit-scrollbar-thumb{
+    border-radius: 15px;
+    background-color: var(--ColorNavigatorBar);
+    cursor: pointer;
+}
+
 main .Avisos--panel  table caption{
     margin-bottom: 5px;
     font-size: 1.4em;
@@ -98,14 +109,14 @@ main .Avisos--panel  table tr{
 main .Avisos--panel  table td{
     font-size: 1.1em;
     border-bottom: 1px solid #aaa;
-    padding: 9px 20px;
+    padding: 9px 10px;
     letter-spacing: 1px;
     text-align: center;
 }
 main .Content{
     display: flex;
     flex-flow: column wrap;
-    gap: 10px;
+    gap: 35px;
     flex: 1;
 }
 main .panel--Estadistica{
@@ -121,7 +132,8 @@ main .panel--Estadistica{
 }
 main .panel--Estadistica .Content--panel--Estadistica{
     display: flex;
-    gap: 12px;
+    gap: 5px;
+    padding-left: 20px;
     width: 680px;
     height: 200px;
     padding: 4px;
@@ -129,7 +141,7 @@ main .panel--Estadistica .Content--panel--Estadistica{
     
 }
 main .panel--Estadistica .Content--panel--Estadistica h3{
-    font-size: 1.3em;
+    font-size: 1.5em;
     letter-spacing: 1px;
     font-weight: 500;
     color: var(--PrimaryColor);
@@ -142,7 +154,7 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadisitca__1
     padding: 2px;
     position: relative;
     top: 33px;
-    left: -125px;
+    left: -95px;
 }
 main .panel--Estadistica .Content--panel--Estadistica .Container--Estadisitca__1 .Historia--Ventas{
     background-color: var(--PrimaryColor);
@@ -165,6 +177,8 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadisitca__1
     font-size: 1.2em;
     font-weight: 600;
     color: var(--ColorNavigatorBar);
+    position: relative;
+    left: 85px;
 }
 main .panel--Estadistica .Content--panel--Estadistica .Container--Estadisitca__1 .Ventas--container span{
     font-size: 1.4em;
@@ -175,7 +189,7 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2
     gap: 10px;
     margin-left: 5px;
     position: relative;
-    left: -135px;
+    left: -95px;
     top: 33px;
 }
 main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2 .Ingresos--Container{
@@ -192,20 +206,6 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2
 main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2 .Ingresos--Container span{
     font-size: 1.4em;
 }
-main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2 .Egresos--Container{
-    background-color: var(--PrimaryColor);
-    width: 140px;
-    padding: 10px;
-    text-align: center;
-    border: 2px solid #000;
-    border-radius: 15px;
-    font-size: 1.2em;
-    font-weight: 700;
-    color: var(--ColorNavigatorBar);
-}
-main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2 .Egresos--Container span{
-    font-size: 1.4em;
-}
 main .panel--Estadistica .Content--panel--Estadistica .Grafica--Estadistica{
     width: 240px;
     height: 140px;
@@ -215,7 +215,7 @@ main .panel--Estadistica .Content--panel--Estadistica .Grafica--Estadistica{
     justify-content: center;
     align-items: center;
     position: relative;
-    left: -125px;
+    left: -85px;
     border-radius: 15px;
     top: 33px;
 }
@@ -234,12 +234,11 @@ main .Panel--pedidos .Pedidos{
     display: flex;
     flex-direction: column wrap;
     gap: 15px;
-    padding: 10px;
     margin: 0 10px;
 }
 main .Panel--pedidos .Pedidos h3{
     color: var(--PrimaryColor);
-    font-size: 1.3em;
+    font-size: 1.5em;
     font-weight: 500;
     letter-spacing: 1px;
 }
@@ -248,7 +247,6 @@ main .Panel--pedidos .Container--pedidos{
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    
     gap: 10px;
       
 }
@@ -256,8 +254,6 @@ main .Panel--pedidos .Container--pedidos .Container--1{
     width: 590px;
     display: flex;
     justify-content: center;
-    gap: 25px;
-    margin-top: 2px;
     align-items: center;
 }
 main .Panel--pedidos .Container--pedidos .Container--1 .Solicitudes--container{
@@ -272,44 +268,14 @@ main .Panel--pedidos .Container--pedidos .Container--1 .Solicitudes--container{
 main .Panel--pedidos .Container--pedidos .Container--1 .Solicitudes--container span{
     font-size: 1.4em;
 }
-main .Panel--pedidos .Container--pedidos .Container--1 .Procesados--Container{
-    width: 190px;
-    height: 60px;
-    text-align: center;
-    padding: 10px;
-    background-color: var(--PrimaryColor);
-    border-radius: 15px;
-    font-weight: 700;
-}
-main .Panel--pedidos .Container--pedidos .Container--1 .Procesados--Container span{
-    font-size: 1.4em;
-}
-main .Panel--pedidos .Container--pedidos .Container--1 .Envios--Regionales{
-    width: 300px;
-    height: 60px;
-    text-align: center;
-    padding: 10px;
-    background-color: var(--PrimaryColor);
-    border-radius: 15px;
-    font-weight: 700;
-}
-main .Panel--pedidos .Container--pedidos .Container--1 .Envios--Regionales span{
-    font-size: 1.4em;
-    text-wrap: nowrap;
-}
-main .Panel--pedidos .Container--pedidos .Container--1 .Envios--Regionales span .Title{
-    display: inline-block;
-    font-size: 1.4em;
-    font-weight: 500;
-    margin-left: 5px;
-}
+
 main .Panel--pedidos .Container--pedidos .Container--2{
     width: 590px;
     display: flex;
     gap: 25px;
     justify-content: center;
     align-items: center;
-    margin-top: 2px;
+    
     position: relative;
 }
 main .Panel--pedidos .Container--pedidos .Container--2 .Via--container{
@@ -336,24 +302,5 @@ main .Panel--pedidos .Container--pedidos .Container--2 .Completados--Container{
 }
 main .Panel--pedidos .Container--pedidos .Container--2 .Completados--Container span{
     font-size: 1.4em;
-}
-main .Panel--pedidos .Container--pedidos .Container--2 .Envios--Nacionales{
-    width: 300px;
-    height: 60px;
-    text-align: center;
-    padding: 10px;
-    background-color: var(--PrimaryColor);
-    border-radius: 15px;
-    font-weight: 700;
-}
-main .Panel--pedidos .Container--pedidos .Container--2 .Envios--Nacionales span{
-    font-size: 1.4em;
-    text-wrap: nowrap;
-}
-main .Panel--pedidos .Container--pedidos .Container--2 .Envios--Nacionales span .Title{
-    display: inline-block;
-    font-size: 1.4em;
-    font-weight: 500;
-    margin-left: 7px;
 }
 
