Correciones en la view de estadistica la mayoria de correciones son font-size o el scroll

--- a/public/css/admin/inventario.css
+++ b/public/css/admin/inventario.css
@@ -141,6 +141,7 @@ main .Table--inventario table tbody tr {
 main .Table--inventario table tbody tr:hover {
     background-color: var(--ColorNavigatorBar);
     color: var(--PrimaryColor);
+    cursor: pointer;
 }
 .presionado--bottom{
     background-color: var(--ColorNavigatorBar);
