--- a/public/css/admin/estadistica.css
+++ b/public/css/admin/estadistica.css
@@ -43,13 +43,12 @@ main .Content--table .Table--Container div{
     
 }
 main .Content--table .Table--Container div input{
-    padding: 4px 8px;
-    width: 295px;
-    font-size: 1.1em;
-    border-radius: 15px;
-    outline: none;
+    width: 230px;
+    padding: 7px 8px;
+    width: 300px;
     border: 2px solid #aaa;
-    transition: .1s linear;
+    outline: none;
+    border-radius: 15px;
 }
 main .Content--table .Table--Container div input:hover{
     border: 2px solid var(--SecondaryColor);
@@ -58,7 +57,7 @@ main .Content--table .Table--Container div input::placeholder{
     color: var(--ColorNavigatorBar)
 }
 main .Content--table .Table--Container div label img{
-    width: 30px;
+    width: 25px;
     position: relative;
     left: -35px;
 }
@@ -71,15 +70,25 @@ main .Content--table .Table--Container div table{
     overflow-y: auto;
     padding: 5px;
 }
+main .Content--table .Table--Container div table::-webkit-scrollbar{
+    width: 10px;
+    background-color: #aaa;
+    border-radius: 15px;
+}
+main .Content .Table--Container div table::-webkit-scrollbar-thumb{
+    border-radius: 15px;
+    background-color: var(--ColorNavigatorBar);
+}
 main .Content--table .Table--Container div table caption{
-    font-size: 1.2em;
+    font-size: 1.1em;
     letter-spacing: 1px;
     border-bottom: 1px solid #aaa;
     font-weight: 600;
 }
 main .Content--table .Table--Container div table th{
-    padding: 2px 20px;
+    padding: 2px 30px;
     border-bottom: 1px solid #aaa;
+    font-size: 0.9em;
 }
 main .Content--table .Table--Container div table tr{
     transition: .1s linear;
@@ -90,7 +99,7 @@ main .Content--table .Table--Container div table tbody tr:hover{
     cursor: pointer;
 }
 main .Content--table .Table--Container div table td{
-    font-size: 1.1em;
+    font-size: 0.9em;
     text-align: center;
     padding: 3px 10px;
     border-bottom: 1px solid #aaa;
@@ -101,6 +110,9 @@ main .Content--Container{
     display: flex;
     flex-flow: row wrap;
     gap: 5px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
     
 }
 main .Content--Container .Conversiones--Grafica{
@@ -117,7 +129,6 @@ main .Content--Container .Conversiones--Grafica article{
     border-radius: 15px;
 }
 main .Content--Container .Conversiones--Grafica article:nth-child(1){
-    
     width: 260px;
     height: 140px;
     background-color: var(--SecondaryColor);
@@ -149,30 +160,7 @@ main .Content--Container .Conversiones--Grafica article div input::placeholder{
 main .Content--Container .Conversiones--Grafica article div input:hover{
     border: 2px solid var(--ColorNavigatorBar);
 }
-main .Content--Container .Conversiones--Grafica article div span{
-    font-size: 1.3em;
-    color: #aaa;
-}
-main .Content--Container .Conversiones--Grafica article .Porcentaje{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    gap: 15px;
-}
-main .Content--Container .Conversiones--Grafica article .Porcentaje p{
-    font-size: 1.1em;
-    text-transform: capitalize;
-    font-weight: 500;
-}
-.Porcentaje #Resultado{
-    width: 80px;
-    border: 1px solid #fff;
-    padding: 5px;
-    background-color: var(--PrimaryColor);
-    position: relative;
-    top: -4px;
-    border-radius: 15px;
-}
+
 main .Content--Container .Conversiones--Grafica article:nth-child(2){
     border: 1px solid #aaa;
     width: 260px;
@@ -193,13 +181,23 @@ main .Content--Container .Table--Popular{
     display: block;
     text-align: center;
     overflow-y: auto;
+    width: 230px;
     height: 300px;
     border-spacing: 0;
     padding: 5px;
     border-radius: 15px;
 }
+.Table--Popular table::-webkit-scrollbar{
+    width: 10px;
+    background-color: #aaa;
+    border-radius: 20px;
+}
+.Table--Popular table::-webkit-scrollbar-thumb{
+    border-radius: 15px;
+    background-color: var(--ColorNavigatorBar);
+}
 .Table--Popular table caption{
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-weight: 600;
     padding: 5px;
     text-wrap: nowrap;
@@ -216,8 +214,8 @@ main .Content--Container .Table--Popular{
     cursor: pointer;
 }
 .Table--Popular table tbody tr td{
-    padding: 5px 0;
-    font-size: 1.1em;
+    padding: 20px 0;
+    font-size: 1em;
     border-bottom: 1px solid #aaa;
 }
 main .Ventas{
