Tocando algo del backend pero sigo con el frontend

--- a/src/routes/admin/proveedor.ejs
+++ b/src/routes/admin/proveedor.ejs
@@ -76,7 +76,7 @@
         <dialog id="dialog--1">
             <span id="CerrarAgregar">X</span>
             <h2>Agregar Proveedor</h2>
-            <form action="/admin/proveedor/create" method="POST">
+            <form action="/admin/proveedor/create" method="POST" enctype="multipart/form-data">
                 <div class="Input--Container">
                     <div>
                         <label for="Nombre--proveedor">Nombre del Proveedor</label>
