--- a/src/routes/admin/minorista.ejs
+++ b/src/routes/admin/minorista.ejs
@@ -13,8 +13,8 @@
         <section class="Content--page">
             <article class="input--Container">
                 <input type="search" placeholder="Destino" id="Destino">
-                <label for="Lupa">
-                    <img alt="Lupa" src="/images/icons/search.png" id="Lupa">
+                <label for="Destino">
+                    <img alt="Lupa" src="/images/icons/search.png" id="Destino">
                 </label>
             </article>
             <article class="Minorista--Mayorista">
