--- a/src/routes/admin/mayorista.ejs
+++ b/src/routes/admin/mayorista.ejs
@@ -13,8 +13,8 @@
         <div class="Content--page">
             <div class="input--Container">
                 <input type="search" placeholder="Destino" id="Destino">
-                <label for="Lupa">
-                    <img alt="Lupa" src="/images/icons/search.png" id="Lupa">
+                <label for="Destino">
+                    <img alt="Lupa" src="/images/icons/search.png" id="Destino">
                 </label>
             </div>
             <div class="Minorista--Mayorista">
