--- a/src/layouts/Landing/product/index.html
+++ b/src/layouts/Landing/product/index.html
@@ -125,9 +125,10 @@
                         100,00$
                     </span>
                 </div>
-                <div>
+                <div style="flex-direction: column; display: flex; gap: 3vmin;">
                     <div id="units">
-
+                        <input type="number" class="productCant">
+                        <button class="addButton">Añadir</button>
                     </div>
                     <details>
                         <summary>FICHA TECNICA</summary>
