Moving button to bottom

--- a/src/layouts/Landing/product/index.html
+++ b/src/layouts/Landing/product/index.html
@@ -126,13 +126,14 @@
                     </span>
                 </div>
                 <div style="flex-direction: column; display: flex; gap: 3vmin;">
+                    <details>
+                        <summary>FICHA TECNICA</summary>
+                        ajshdkjasbdkjahksjdhakjszhdkasjdkajbskdjahisdhaiushdiuahsiudhaiushduiahsudhauhsdddddddddddddddddddddddddddddddddddhdudhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+                    </details>
                     <div id="units">
                         <input type="number" class="productCant">
                         <button class="addButton">Añadir</button>
                     </div>
-                    <details>
-                        <summary>FICHA TECNICA</summary>
-                    </details>
                 </div>
             </div>
         </div>
