--- a/src/layouts/Landing/product/styles.css
+++ b/src/layouts/Landing/product/styles.css
@@ -69,3 +69,21 @@
     opacity: 1;
     scale: 1.3;
 }
+
+details{
+    width: 30dvw;
+    border: 0.5px solid black;
+    word-wrap: break-word;
+    font-size: small;
+}
+
+summary{
+    padding: 1vmin;
+    cursor: pointer;
+    font-size: medium;
+}
+
+details[open] summary{
+    border-bottom: 0.5px solid black;
+    font-weight: bold;
+}
