--- a/src/layouts/Landing/product/index.html
+++ b/src/layouts/Landing/product/index.html
@@ -117,7 +117,7 @@
                 <div>
                     <p style="font-size: 1.8vmin;">Inicio > Old Par</p>
                     <h2>Whisky Grand Old Parr Aged 12 years 750ml</h2>
-                    <p>
+                    <p style="line-height: 1.5;">
                         Unidades Disponibles: 7<br>
                         Categoria: Whisky
                     </p>
@@ -128,7 +128,11 @@
                 <div style="flex-direction: column; display: flex; gap: 3vmin;">
                     <details>
                         <summary>FICHA TÉCNICA</summary>
-                        ajshdkjasbdkjahksjdhakjszhdkasjdkajbskdjahisdhaiushdiuahsiudhaiushduiahsudhauhsdddddddddddddddddddddddddddddddddddhdudhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+                        Nombre: Whisky Grand Old Parr Aged 12 years<br>
+                        Unidades por caja: 4<br>
+                        Tipo: Whisky<br>
+                        Productor: <br>
+                        Capacidad: 750ml <br>
                     </details>
                     <div id="units">
                         <input type="number" class="productCant">
@@ -137,6 +141,50 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <h3 class="subtitle">Productos Relacionados</h3>
+        <ul class="productSection">
+            <li>
+                <div class="productView">
+                    <input type="number" class="productCant">
+                    <button>Agregar</button>
+                </div>
+                <h4>Anis Cartujo</h4>
+                <h5>Desde 0.00$</h3>
+            </li>
+            <li>
+                <div class="productView">
+                    <input type="number" class="productCant">
+                    <button>Agregar</button>
+                </div>
+                <h4>Anis Cartujo</h4>
+                <h5>Desde 0.00$</h3>
+            </li>
+            <li>
+                <div class="productView">
+                    <input type="number" class="productCant">
+                    <button>Agregar</button>
+                </div>
+                <h4>Anis Cartujo</h4>
+                <h5>Desde 0.00$</h3>
+            </li>
+            <li>
+                <div class="productView">
+                    <input type="number" class="productCant">
+                    <button>Agregar</button>
+                </div>
+                <h4>Anis Cartujo</h4>
+                <h5>Desde 0.00$</h3>
+            </li>
+            <li>
+                <div class="productView">
+                    <input type="number" class="productCant">
+                    <button>Agregar</button>
+                </div>
+                <h4>Anis Cartujo</h4>
+                <h5>Desde 0.00$</h3>
+            </li>
+        </ul>
     </main>
 
     <footer>
